@@ -6388,11 +6388,6 @@ sub macro_define ($$$$$$)
     }
   $var_type{$var}{$cond} = $type;
 
-  # When adding, since we rewrite, don't try to preserve the
-  # Automake continuation backslashes.
-  $value =~ s/\\$//mg
-    if $type eq '+' && $owner == VAR_AUTOMAKE;
-
   # Differentiate assignment types.
 
   # 1. append (+=) to a variable defined for current condition
@@ -7337,6 +7332,11 @@ sub variable_pretty_output ($@)
       my $val = $var_value{$var}{$cond};
       my $equals = $var_type{$var}{$cond} eq ':' ? ':=' : '=';
       my $make_condition = make_condition ($cond);
+
+      # Suppress escaped new lines.  &pretty_print_internal will
+      # add them back, maybe at other places.
+      $val =~ s/\\$//mg;
+
       $output_vars .= pretty_print_internal ("$make_condition$var $equals",
 					     "$make_condition\t",
 					     split (' ' , $val));
